MUI alternative to Sort by was added in FilterProductItems.js. Modularized ProductItem.js for future usage.

--- a/public/index.html
+++ b/public/index.html
@@ -62,11 +62,11 @@
     <script src="%PUBLIC_URL%/public_resources/js/jquery-3.3.1.min.js"></script>
 
     <script src="%PUBLIC_URL%/public_resources/js/bootstrap.min.js"></script>
-<!--    <script src="%PUBLIC_URL%/public_resources/js/jquery.nice-select.min.js"></script>-->
+    <script src="%PUBLIC_URL%/public_resources/js/jquery.nice-select.min.js"></script>
     <script src="%PUBLIC_URL%/public_resources/js/jquery-ui.min.js"></script>
     <script src="%PUBLIC_URL%/public_resources/js/jquery.slicknav.js"></script>
     <script src="%PUBLIC_URL%/public_resources/js/mixitup.min.js"></script>
-<!--    <script src="%PUBLIC_URL%/public_resources/js/owl.carousel.min.js"></script>-->
+    <script src="%PUBLIC_URL%/public_resources/js/owl.carousel.min.js"></script>
 
     <script src="%PUBLIC_URL%/public_resources/js/main.js"></script>
 
