--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,19 @@
       href="%PUBLIC_URL%/public_resources/sass/style.css"
       type="text/css"
     />
+    <style>
+      /* Chrome, Safari, Edge, Opera */
+      input::-webkit-outer-spin-button,
+      input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+
+      /* Firefox */
+      input[type=number] {
+        -moz-appearance: textfield;
+      }
+    </style>
 
     <title>Shop's name</title>
   </head>
