Fixed some UX related bugs, final stable version

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
       }
     </style>
 
-    <title>Shop's name</title>
+    <title>Wieder_ Markt</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
